force-app/main/default/objects/CONTAINER_INFO_MAPPINGS__c/CONTAINER_INFO_MAPPINGS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Container Info Mappings</label>
</CustomObject>