force-app/main/default/objects/CONTAINER_INFO_MAPPINGS__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <length>2</length>
    <type>Text</type>
</CustomField>